# ciclope

./: .gitignore  .readthedocs.yaml  CITATION.cff  CT2FE_example01_voxelFE_Calculix-Copy1.ipynb  CT2FE_example01_voxelFE_static_CalculiX.ipynb  CT2FE_example01_voxelFE_static_Calculix.ipynb  CT2FE_example02_Slicer3Dmesher.ipynb  CT2FE_example02_Slicer3Dmesher_Nlgeom_CalculiX.ipynb  CT2FE_example03_voxelFE_linear_CalculiX.ipynb  CalculiX_installation_readme.txt  LICENSE  MANIFEST.in  README.md  ciclope.py  ciclope_ex01_voxelFE_CalculiX.ipynb  ciclope_ex01_voxelFE_trabecularbone_CalculiX.ipynb  ciclope_ex02_tetraFE_steelfoam_CalculiX.ipynb  ciclope_ex02_voxelFE_steelfoam_CalculiX.ipynb  ciclope_tests.py  dat2txt.py  development.md  mesh2Abaqus.py  preprocess.py  prop_PMMA.inp  prop_bone.inp  prop_steel.inp  pybonemorph.py  pyfabric_demo.ipynb  pyfabric_ex01_prox_femur.ipynb  pyproject.toml  recon_utils.py  setup.cfg  spooles.out  stack2Abaqus.py  temp.inp  temp_example02_comp_static.inp  temp_example02_tens_Nlgeom.inp  test_tetramesh_polichrome.py  tetraFE.py  todo.md  (+1 more)
.github/workflows/: ci-tests.yml  draft-pdf.yml  publish.yml
CT2FE/: CT2FE_example02_Slicer3Dmesher_Nlgeom_CalculiX.ipynb
JCW_2022/: ITK_tutorial.md  notes.md  readme.md
JCW_2022/Matlab_BeamFE/: Truss_FEM_trab_bone_V7.m  f_acquire_data.m
JCW_2022/notebooks/: ITK_tutorial_part1.ipynb  JCW_tetrauFE_60um_CalculiX.ipynb  JCW_tetrauFE_CalculiX.ipynb  JCW_voxeluFE_CalculiX.ipynb
JCW_2022/notebooks/.ipynb_checkpoints/: JCW_tetrauFE_60um_CalculiX-checkpoint.ipynb  JCW_tetrauFE_CalculiX-checkpoint.ipynb
JOSS_2022/: paper.bib  paper.md  pippo.bib
ciclope/: ciclope.py  ciclope_ex01_voxelFE_trabecularbone_CalculiX.ipynb  ciclope_ex02_tetraFE_steelfoam_CalculiX.ipynb  recon_utils.py
ciclope-cli/: __init__.py  _main.py
ciclope/.ipynb_checkpoints/: ciclope_ex01_voxelFE_trabecularbone_CalculiX-checkpoint.ipynb
docs/: CONTRIBUTING.md  about.md  acknowledgements.md  api.rst  conf.py  environment.yml  examples.rst  index.rst  install.md  requirements.txt  test.md  usage.md
docs/ipynb/: ciclope_ex01_voxeluFE_CalculiX.ipynb  ciclope_ex02_tetrauFE_CalculiX.ipynb  ciclope_ex03_tetraFE_tooth_CalculiX.ipynb  ciclope_ex04_tetraFE_steelfoam_nonlinear_CalculiX.ipynb
envs/: thkdebian.yml
examples/: ParOSol TU Wien install euler.md  ciclope_ex01_voxelFE_trabecularbone_CalculiX.ipynb  ciclope_ex01_voxeluFE_CalculiX.ipynb  ciclope_ex02_tetraFE_steelfoam_CalculiX-Copy1.ipynb  ciclope_ex02_tetrauFE_CalculiX.ipynb  ciclope_ex03_tetraFE_tooth.ipynb  ciclope_ex03_tetraFE_tooth_CalculiX.ipynb  ciclope_ex04_tetraFE_steelfoam_nonlinear_CalculiX.ipynb  reaction_forces_parosol.md
examples/.ipynb_checkpoints/: ciclope_ex01_voxelFE_trabecularbone_CalculiX-checkpoint.ipynb  ciclope_ex02_tetraFE_steelfoam_CalculiX-checkpoint.ipynb
examples/ipynb/: 20251202_process_ParOSol_results.ipynb  ciclope_ex01_voxeluFE_CalculiX.ipynb  ciclope_ex02_tetrauFE_CalculiX.ipynb  ciclope_ex03_tetraFE_tooth_CalculiX.ipynb  ciclope_ex04_tetraFE_steelfoam_nonlinear_CalculiX.ipynb  ciclope_ex05.1_beamFE-skel.ipynb  ciclope_ex05_beamFE.ipynb  ciclope_ex05_trussFE.ipynb  ciclope_ex06_tetraFE_dental_bracket_CalculiX.ipynb  ciclope_ex07_voxeluFE_CYL_CalculiX.ipynb  ciclope_ex08_tetrauFE_CYL_CalculiX.ipynb  ciclope_ex08_tetrauFE_CYL_CalculiX.ipynb.ipynb  ciclope_ex09_voxeluFE_ParOSol.ipynb  ciclope_ex10_tetrauFE_TET10_CalculiX.ipynb  ciclope_ex11_scaffold_voids_tetramesh.ipynb  ciclope_ex12_misalignment_tetrauFE.ipynb  ciclope_ex13_CYL_trabecular_metrics.ipynb  process_ParOSol_results.ipynb  purge_mesh.ipynb
examples/scripts/: ciclope_voxelFE_pipeline_ParOSol.py  submit.supertrab_parosol_array.slurm.sh
input_templates/: tmp_bend_static_bone.inp  tmp_comp_static_scaffold.inp  tmp_example01_comp_static_bone.inp  tmp_example01_comp_static_bone_matprop.inp  tmp_example01_tens_static.inp  tmp_example01_tens_static_bone.inp  tmp_example02_comp_static.inp  tmp_example02_tens_Nlgeom.inp  tmp_example02_tens_Nlgeom2.inp  tmp_example02_tens_Nlgeom_steel.inp  tmp_example02_tens_static.inp  tmp_example02_tens_static_steel.inp  tmp_example03_comp_static_tooth.inp  tmp_example03_tooth_comp_static.inp  tmp_example05_comp_static_bone.inp  tmp_example06_comp_static_dental_bracket.inp
material_properties/: PMMA.inp  bone.inp  bone_Econst.inp  bone_Elinear.inp  bone_Etissue.inp  steel.inp
packaging_files/: setup.cfg
prefect/: voxelFE_flow.py
prefect_flows/: voxelFE_flow.py
pyfabric/: README.md  ellipsoid_fit.py  pyfabric.py  pyfabric_ex01_prox_femur.ipynb
pyfabric/.ipynb_checkpoints/: pyfabric_ex01_prox_femur-checkpoint.ipynb
scripts/: mesh2Abaqus.py  stack2Abaqus.py  txt2plot.py
src/ciclope/: __about__.py  __init__.py  ciclope.py  pipeline.py  pybonemorph.py  recon_utils.py  tetraFE.py  voxelFE.py
src/ciclope/ciclope-cli/: _main.py
test/: meshes_comparison.py  quick_test_ciclope.py  quick_test_tetra_mesh.py  test_ciclope.py  test_input.inp  tetra_mesh_from_surface.ipynb  trab_scaffold_void_tetrahedra_mesh_COMSOL.py
test/trab/: slice_00.tif  slice_03.tif  slice_05.tif  slice_06.tif
tests/: test_01.py  test_ciclope_prefect02.py  test_paraview_plot2.py  test_tetramesh_polichrome.py
tests/ciclope/: test_01.py  test_ciclope_prefect00.py  test_ciclope_prefect01.py  test_ciclope_prefect03.py  test_paraview_plot.py  test_prefect_00.py  test_tetramesh_polichrome.py
tests/pyfabric/: pyfabric_test_04.py  test_01.py  test_02.py  test_03.py
(+750 files in other folders)
