[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ciclope"
authors = [
  { name="Gianluca Iori", email="gianthk.iori@gmail.com" },
  { name="Martino Pani", email="martino.pani@port.ac.uk" },
]
keywords = [
    "computed tomography",
    "finite elements",
    "image processing",
    "engineering",
    "simulation",
    "biomechanics"
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "logging",
    "datetime",
    "os",
    "meshio >=5.0.0",
    "pygalmesh",
    "PyMCubes",
]

[project.optional-dependencies]
pipeline = [
    "matplotlib",
    "scikit-image",
    "tqdm",
    "dxchange",
    "pypng",
    "textwrap",
    ]
test = [
    "itkwidgets",
    "vtk",
    "ccx2paraview",
]

[project.urls]
Home = "https://github.com/gianthk/ciclope"

[project.scripts]
ciclope = "ciclope:pipeline.main"