[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ciclope"
description = "Computed Tomography to Finite Elements"
authors = [
    { name="Gianluca Iori", email="gianthk.iori@gmail.com" },
    { name="Martino Pani", email="martino.pani@port.ac.uk" },
    { name="Alfonso Dario Santamaria", email="dariosantamaria99@gmail.com"},
    { name="Gigi Crimi"},
]
keywords = [
    "computed tomography",
    "finite elements",
    "image processing",
    "engineering",
    "simulation",
    "biomechanics",
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
    "numpy~=1.26",
    "meshio==5.0.0",
    "pygalmesh>=0.10.6",
    "PyMCubes",
    "scipy",
    "scikit-image",
    "pypng",
    "tqdm",
    "matplotlib",
    "tifffile",
    "h5py",
    "opencv",
]

[project.optional-dependencies]
all = [
    "itkwidgets",
    "itk",
    "vtk",
    "ccx2paraview",
]

[project.urls]
Home = "https://github.com/gianthk/ciclope"

[project.scripts]
ciclope = "ciclope:pipeline.main"

[tool.setuptools.dynamic]
version = {attr = "ciclope.__version__"}