[metadata]
name = ciclope
version = 1.1.0
author = Gianluca Iori et al.
author_email = gianthk.iori@gmail.com
description = Computed Tomography to Finite Elements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gianthk/ciclope
license = MIT
project_urls =
    Bug Tracker = https://github.com/gianthk/ciclope/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    scientific
    engineering
    tomography
    computed tomography
    fem
    finite elements

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src